# bsc-web-benchmark

./: .gitignore  .prettierignore  CITATION.cff  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
analytics-server/src/: index.ts
apps/analytics-server/: package.json  tsconfig.json
apps/app-angular/: .dockerignore  Dockerfile  Dockerfile.dockerignore  angular.json  package.json
apps/app-leptos/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dockerignore  index.html  package.json
apps/app-leptos/public/css/: main.css
apps/app-leptos/src/: lib.rs  main.rs
apps/app-react/: Dockerfile  index.html  package.json  (+1 more)
apps/realworld-leptos/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dockerignore  Trunk.toml  index.html  package.json
apps/realworld-leptos/src/: lib.rs  main.rs
apps/realworld-leptos/src/auth/: api.rs  mod.rs
apps/realworld-leptos/src/components/: article_preview.rs  buttons.rs  mod.rs  navbar.rs  navitems.rs
apps/realworld-leptos/src/models/: article.rs  comment.rs  mod.rs  pagination.rs  tag.rs  user.rs
apps/realworld-leptos/src/pages/: article.rs  editor.rs  home.rs  login.rs  mod.rs  profile.rs  reset_password.rs  settings.rs  signup.rs
apps/realworld-leptos/src/utils/: mod.rs
benchmark/benchmark-analyze/: README.md  package.json  pyproject.toml
benchmark/benchmark-analyze/data/: benchmark-results.csv
benchmark/benchmark-analyze/notebooks/: ChatGPT.ipynb  Gemini.ipynb  analyze-example.ipynb  benchmark-app.ipynb  benchmark-realworld.ipynb
benchmark/benchmark-analyze/scripts/: merge_results.py
scripts/: measure-build-size.js
(+165 files in other folders)
